# fpsoccer

./: Cargo.toml  cargo.toml  client.js  editor.py  index.html  main.js  main.rs  main_prod.rs  optimized_main_prod.rs
1ball1.0/: game.html  game.rs  main.js  websocket.rs
1ballmobile/: game.rs  main.js  player.rs  websocket.rs
assets/: map_data.json
cdfinal/: cargo.toml  game.rs  main.js  main.rs  player.rs  webrtc-manager.js  websocket.rs
fponline/: dual_connection.rs  fast-channel-manager.js  game.html  game.rs  hybrid-networking-integration.js  index.html  main.js  main.rs  webrtc-signaling.js  webrtc_signaling.rs  websocket.rs
fpsoccer/: ball.rs  game.rs  index.html  lobby.rs  main.js  main.rs  player.rs  websocket.rs
lobby/: collision.rs  game.html  game.rs  lobby.rs  main.js  player.rs  websocket.rs
mobil2.0/: game.html  game.rs  main.js
mobilefinal/: collision.rs  game.html  game.rs  lobby.html  main.js
namedisplay/: game.html  game.rs  lobby.html  lobby.rs  main.js  player.rs  websocket.rs
prod/: ball.rs  config.rs  game.rs  main.rs  websocket.rs
rocketcd/: game.rs  index.html  main.js  main.rs  websocket.rs
rockets/: game.rs  lobby.html  main.js  player.rs
shotclock/: ball.rs  game.rs  lobby.html  main.js  player.rs
teams/: ball.rs  game.rs  main.js  player.rs  websocket.rs
ublike/: ball.rs  collision.rs  dual_connection.rs  game.html  game.rs  index.html  lobby.html  lobby.rs  main.js  main.rs  main_js_sprites  player.rs  websocket.rs  webtransport_relay.rs
