[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game_server"
path = "main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.17"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
